--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -1,203 +1,129 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LigiMed Dashboard</title>
-    <link rel="stylesheet" href="../css/main.css" />
-  </head>
+<!-- DASHBOARD CONTENT ONLY -->
+<div class="dashboard-page">
 
-  <body>
-    <!-- Top Navbar -->
-    <div class="topbar">
-      <h2>LigiMed</h2>
+  <div class="container">
 
-      <div class="profile-section">
-        <div class="notify">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000">
-            <path
-              d="M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160Zm320-300Zm0 420q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-280h320v-280q0-66-47-113t-113-47q-66 0-113 47t-47 113v280Z"
-            />
-          </svg>
-          <span class="badge">3</span>
+    <!-- Top Stats -->
+    <div class="grid grid-4">
+
+      <!-- Total Orders -->
+      <div class="card">
+        <div class="card-header">
+          <h4>Total Orders</h4>
+          <div class="card-icon orders">📦</div>
         </div>
-        <div class="profile">
-          <div class="profile-circle">M</div>
-          <div>
-            <strong>MediCare Pharmacy</strong><br />
-            <span class="text-muted" style="font-size: 13px">View Profile</span>
-          </div>
-        </div>
+
+        <h3>248</h3>
+        <span class="text-success">+12% from last month</span>
       </div>
+
+      <!-- Pending Deliveries -->
+      <div class="card">
+        <div class="card-header">
+          <h4>Pending Deliveries</h4>
+          <div class="card-icon deliveries">🚚</div>
+        </div>
+
+        <h3>15</h3>
+        <span class="text-muted">3 arriving today</span>
+      </div>
+
+      <!-- Low Stock Alerts -->
+      <div class="card">
+        <div class="card-header">
+          <h4>Low Stock Alerts</h4>
+          <div class="card-icon alert">⚠️</div>
+        </div>
+
+        <h3>8</h3>
+        <span class="text-danger">Requires attention</span>
+      </div>
+
+      <!-- Credit Available -->
+      <div class="card">
+        <div class="card-header">
+          <h4>Credit Available</h4>
+          <div class="card-icon available">💳</div>
+        </div>
+
+        <h3>₹2.5L</h3>
+        <span class="text-muted">₹50K used this month</span>
+      </div>
+
     </div>
 
-    <div class="container">
-      <!-- Top Counts -->
-      <div class="grid grid-4">
-        <div class="card">
-          <div class="card-details">
-            <h4>Total Orders</h4>
-            <h3>248</h3>
-            <span class="text-success">+12% from last month</span>
-          </div>
-          <div class="card-img orders">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF">
-              <path
-                d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"
-              />
-            </svg>
-          </div>
-        </div>
+    <!-- Quick Actions -->
+    <h3 style="margin-top: 35px; margin-bottom: 15px">Quick Actions</h3>
 
-        <div class="card">
-          <div class="card-details">
-            <h4>Pending Deliveries</h4>
-            <h3>15</h3>
-            <span class="text-muted">3 arriving today</span>
-          </div>
-          <div class="card-img deliveries">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF">
-              <path d="m136-240-56-56 296-298 160 160 208-206H640v-80h240v240h-80v-104L536-320 376-480 136-240Z" />
-            </svg>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-details">
-            <h4>Low Stock Alerts</h4>
-            <h3>8</h3>
-            <span class="text-danger">Requires attention</span>
-          </div>
-          <div class="card-img alert">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF">
-              <path
-                d="m40-120 440-760 440 760H40Zm138-80h604L480-720 178-200Zm302-40q17 0 28.5-11.5T520-280q0-17-11.5-28.5T480-320q-17 0-28.5 11.5T440-280q0 17 11.5 28.5T480-240Zm-40-120h80v-200h-80v200Zm40-100Z"
-              />
-            </svg>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-details">
-            <h4>Credit Available</h4>
-            <h3>₹2.5L</h3>
-            <span class="text-muted">₹50K used this month</span>
-          </div>
-          <div class="card-img available">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF">
-              <path
-                d="M880-720v480q0 33-23.5 56.5T800-160H160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720Zm-720 80h640v-80H160v80Zm0 160v240h640v-240H160Zm0 240v-480 480Z"
-              />
-            </svg>
-          </div>
-        </div>
-      </div>
-
-      <!-- Quick Actions -->
-      <h3 style="margin-top: 35px; margin-bottom: 15px">Quick Actions</h3>
-
-      <div class="grid grid-4">
-        <div class="quick-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000">
-            <path
-              d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"
-            />
-          </svg>
-          <br />Place Order
-        </div>
-        <div class="quick-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
-            <path
-              d="M240-80q-50 0-85-35t-35-85v-120h120v-560l60 60 60-60 60 60 60-60 60 60 60-60 60 60 60-60 60 60 60-60v680q0 50-35 85t-85 35H240Zm480-80q17 0 28.5-11.5T760-200v-560H320v440h360v120q0 17 11.5 28.5T720-160ZM360-600v-80h240v80H360Zm0 120v-80h240v80H360Zm320-120q-17 0-28.5-11.5T640-640q0-17 11.5-28.5T680-680q17 0 28.5 11.5T720-640q0 17-11.5 28.5T680-600Zm0 120q-17 0-28.5-11.5T640-520q0-17 11.5-28.5T680-560q17 0 28.5 11.5T720-520q0 17-11.5 28.5T680-480ZM240-160h360v-80H200v40q0 17 11.5 28.5T240-160Zm-40 0v-80 80Z"
-            />
-          </svg>
-          <br />Generate Bill
-        </div>
-        <div class="quick-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
-            <path
-              d="M440-183v-274L200-596v274l240 139Zm80 0 240-139v-274L520-457v274Zm-80 92L160-252q-19-11-29.5-29T120-321v-318q0-22 10.5-40t29.5-29l280-161q19-11 40-11t40 11l280 161q19 11 29.5 29t10.5 40v318q0 22-10.5 40T800-252L520-91q-19 11-40 11t-40-11Zm200-528 77-44-237-137-78 45 238 136Zm-160 93 78-45-237-137-78 45 237 137Z"
-            />
-          </svg>
-          <br />View Inventory
-        </div>
-        <div class="quick-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
-            <path
-              d="M345-120q-94 0-159.5-65.5T120-345q0-45 17-86t49-73l270-270q32-32 73-49t86-17q94 0 159.5 65.5T840-615q0 45-17 86t-49 73L504-186q-32 32-73 49t-86 17Zm266-286 107-106q20-20 31-47t11-56q0-60-42.5-102.5T615-760q-29 0-56 11t-47 31L406-611l205 205ZM345-200q29 0 56-11t47-31l106-107-205-205-107 106q-20 20-31 47t-11 56q0 60 42.5 102.5T345-200Z"
-            />
-          </svg>
-          <br />Order History
-        </div>
-      </div>
-
-      <!-- Low Stock + Recent Orders -->
-      <div class="grid grid-2" style="margin-top: 35px">
-        <!-- Low Stock -->
-        <div class="card">
-          <h3>
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#f58106">
-              <path
-                d="m40-120 440-760 440 760H40Zm138-80h604L480-720 178-200Zm302-40q17 0 28.5-11.5T520-280q0-17-11.5-28.5T480-320q-17 0-28.5 11.5T440-280q0 17 11.5 28.5T480-240Zm-40-120h80v-200h-80v200Zm40-100Z"
-              />
-            </svg>
-            Low Stock Alerts
-          </h3>
-
-          <div class="stock-item">
-            <strong>Paracetamol 500mg</strong>
-            <span class="restock">Restock</span>
-            <div class="progress-bar">
-              <div class="progress" style="width: 25%"></div>
-            </div>
-            <small>50 / 200 strips</small>
-          </div>
-
-          <div class="stock-item">
-            <strong>Amoxicillin 250mg</strong>
-            <span class="restock">Restock</span>
-            <div class="progress-bar">
-              <div class="progress" style="width: 20%"></div>
-            </div>
-            <small>30 / 150 strips</small>
-          </div>
-
-          <div class="stock-item">
-            <strong>Cetirizine 10mg</strong>
-            <span class="restock">Restock</span>
-            <div class="progress-bar">
-              <div class="progress" style="width: 37%"></div>
-            </div>
-            <small>75 / 200 strips</small>
-          </div>
-        </div>
-
-        <!-- Recent Orders -->
-        <div class="card">
-          <h3>Recent Orders</h3>
-
-          <div class="order-card">
-            <strong>ORD-1234</strong>
-            <span class="badge-status in-transit">In Transit</span>
-            <div>MedSupply Co.</div>
-            <small>15 items • ₹12,450</small>
-          </div>
-
-          <div class="order-card">
-            <strong>ORD-1233</strong>
-            <span class="badge-status delivered">Delivered</span>
-            <div>PharmaCorp</div>
-            <small>8 items • ₹8,200</small>
-          </div>
-
-          <div class="order-card">
-            <strong>ORD-1232</strong>
-            <span class="badge-status pending">Pending</span>
-            <div>HealthHub</div>
-            <small>10 items • ₹9,100</small>
-          </div>
-        </div>
-      </div>
+    <div class="grid grid-4">
+      <div class="quick-btn">Place Order</div>
+      <div class="quick-btn">Generate Bill</div>
+      <div class="quick-btn">View Inventory</div>
+      <div class="quick-btn">Order History</div>
     </div>
-  </body>
-</html>
+
+    <!-- Low Stock + Recent Orders -->
+    <div class="grid grid-2" style="margin-top: 35px">
+
+      <!-- Low Stock -->
+      <div class="card">
+        <h3>Low Stock Alerts</h3>
+
+        <div class="stock-item">
+          <strong>Paracetamol 500mg</strong>
+          <span class="restock">Restock</span>
+          <div class="progress-bar">
+            <div class="progress" style="width: 25%"></div>
+          </div>
+          <small>50 / 200 strips</small>
+        </div>
+
+        <div class="stock-item">
+          <strong>Amoxicillin 250mg</strong>
+          <span class="restock">Restock</span>
+          <div class="progress-bar">
+            <div class="progress" style="width: 20%"></div>
+          </div>
+          <small>30 / 150 strips</small>
+        </div>
+
+        <div class="stock-item">
+          <strong>Cetirizine 10mg</strong>
+          <span class="restock">Restock</span>
+          <div class="progress-bar">
+            <div class="progress" style="width: 37%"></div>
+          </div>
+          <small>75 / 200 strips</small>
+        </div>
+      </div>
+
+      <!-- Recent Orders -->
+      <div class="card">
+        <h3>Recent Orders</h3>
+
+        <div class="order-card">
+          <strong>ORD-1234</strong>
+          <span class="badge-status in-transit">In Transit</span>
+          <div>MedSupply Co.</div>
+          <small>15 items • ₹12,450</small>
+        </div>
+
+        <div class="order-card">
+          <strong>ORD-1233</strong>
+          <span class="badge-status delivered">Delivered</span>
+          <div>PharmaCorp</div>
+          <small>8 items • ₹8,200</small>
+        </div>
+
+        <div class="order-card">
+          <strong>ORD-1232</strong>
+          <span class="badge-status pending">Pending</span>
+          <div>HealthHub</div>
+          <small>10 items • ₹9,100</small>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</div>
