Fix billing JS rendering and update dashboard icons to SVG

--- a/index.html
+++ b/index.html
@@ -156,6 +156,6 @@
 
     <!-- SCRIPTS -->
     <script src="js/main.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/billing.js"></script>
 </body>
 </html>
